feat(client): add apps:rename command
This allows users to modify their app names after having created
one.

There was a previous test in api/tests/test_app that checked
to ensure that the PATCH method was not allowed, so I repurposed
it to test appname changes.

The API call to modify app names is:

    PATCH /api/apps/{appname} {new_name}

Which will return HTTP status 200, and the endpoint is no longer
available. You will be able to reach the app at /api/apps/{new_name}
moving forward.

TESTING: Since this affects practically every aspect of app
management, running the integration test suite is recommended:

    $ vagrant up
    $ make pull
    $ cd test
    $ bundle exec rake

fixes #475

--- a/test/Rakefile
+++ b/test/Rakefile
@@ -52,13 +52,18 @@ namespace :tests do
   task :verify_app do
     run_command("curl -s http://testing.#{HOSTNAME} | grep -q 'Powered by Deis'")
   end
+  task :rename_app do
+    Dir.chdir(EXAMPLE_APP) do
+      run_command('deis rename app-renamed')
+    end
+  end
 end
 
 namespace :cleanup do
   task :all => ['destroy_app','destroy_cluster','remove_key','logout']
   task :destroy_app do
     Dir.chdir(EXAMPLE_APP) do
-      run_command('deis apps:destroy --app=testing --confirm=testing')
+      run_command('deis apps:destroy --app=app-renamed --confirm=app-renamed')
     end
   end
   task :destroy_cluster do
