fix(router): remove www prefix from controller
We want to retain the use of the application subdomains to
just that, the applications. removing the optional `www` regex
from the deis-controller entry on the router fixes this. The
controller is now only routable to the TLD for the cluster.

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -42,7 +42,7 @@ http {
 
     server {
         listen 80 default_server;
-        server_name ~^(www\.)?(?<domain>.+)$;
+        server_name ~^(?<domain>.+)$;
         server_name_in_redirect off;
         port_in_redirect off;
 
