feat(router): proxy for controller, builder, and registry
The router component is to be the point of entry for the entire
Deis cluster.

This commit makes the router:
* Forward requests to deis.domain on to the controller
* Forward connections on port 2222 to the builder
* Forward connections on port 5000 to the registry

This requires manually compiling nginx from source with the
tcp_proxy module and adding appropriate upstreams for builder
and registry.

Also, the default route was updated to proxy to the controller.

TESTING: rebuild the router
```console
$ make -C router build restart
```

And focus testing in two areas:
* That nothing was broken with the change to custom-built nginx (use Deis)
* That the router is properly proxying requests on pots 80, 2222, 5000

closes #535
replaces #974

--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -1,13 +1,22 @@
 FROM deis/base
 MAINTAINER Gabriel Monroy <gabriel@opdemand.com>
 
-# install nginx
-RUN apt-get update && \
-    apt-get install -yq python-software-properties
-RUN add-apt-repository ppa:chris-lea/redis-server -y
-RUN add-apt-repository ppa:nginx/stable -y
 RUN apt-get update
-RUN apt-get install -yq nginx
+RUN apt-get install -yq patch libpcre3 libpcre3-dev libssl-dev
+
+RUN wget -q http://nginx.org/download/nginx-1.6.0.tar.gz -O /tmp/nginx-1.6.0.tar.gz
+RUN wget -q https://github.com/yaoweibin/nginx_tcp_proxy_module/archive/v0.4.5.tar.gz -O /tmp/tcp-proxy.tar.gz
+
+WORKDIR /tmp
+
+RUN tar -xzf nginx-1.6.0.tar.gz
+RUN tar -xzf tcp-proxy.tar.gz
+
+WORKDIR /tmp/nginx-1.6.0
+RUN patch -p1 < /tmp/nginx_tcp_proxy_module-0.4.5/tcp.patch
+RUN ./configure --prefix=/usr/share/nginx --sbin-path=/usr/sbin/nginx --conf-path=/etc/nginx/nginx.conf --http-log-path==/var/log/nginx/access.log --error-log-path=/var/log/nginx/error.log --user=www-data --group=www-data --lock-path=/var/lock/nginx.lock --pid-path=/run/nginx.pid --with-http_ssl_module --with-pcre-jit --add-module=/tmp/nginx_tcp_proxy_module-0.4.5
+RUN make
+RUN make install
 
 # install latest etcdctl including no-sync options
 RUN wget -q https://s3-us-west-2.amazonaws.com/deis/etcdctl.no-sync -O /usr/local/bin/etcdctl
@@ -15,5 +24,5 @@ RUN chmod +x /usr/local/bin/etcdctl
 
 ADD . /app
 WORKDIR /app
-EXPOSE 80
+EXPOSE 80 2222 5000
 CMD ["/app/bin/boot"]
