--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -36,10 +36,27 @@ http {
     access_log /dev/stdout;
     error_log /dev/stdout;
 
+    upstream deis-controller {
+        server {{ .deis_controller_host }}:{{ .deis_controller_port }};
+    }
+
     server {
         listen 80 default_server;
-        server_name _; # will never match
+        server_name ~^deis\.(?<domain>.+)$;
         server_name_in_redirect off;
+        port_in_redirect off;
+
+        location / {
+            proxy_buffering             off;
+            proxy_set_header            Host $host;
+            proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_redirect              off;
+            proxy_connect_timeout       10s;
+            proxy_send_timeout          30s;
+            proxy_read_timeout          30s;
+
+            proxy_pass                  http://deis-controller;
+        }
     }
 
     # service definitions for each application
@@ -61,12 +78,41 @@ http {
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_redirect              off;
-            proxy_connect_timeout       10;
-            proxy_send_timeout          30;
-            proxy_read_timeout          30;
+            proxy_connect_timeout       10s;
+            proxy_send_timeout          30s;
+            proxy_read_timeout          30s;
 
             proxy_pass                  http://{{ Base $service.Key }};
         }
     }
     {{ end }}{{ end }}
 }
+
+tcp {
+    tcp_nodelay on;
+    timeout 30000;
+
+    # same directive names, but these are in miliseconds...
+    proxy_connect_timeout       10000;
+    proxy_send_timeout          30000;
+    proxy_read_timeout          30000;
+
+    upstream builder {
+        server {{ .deis_builder_host }}:{{ .deis_builder_port }};
+    }
+
+    server {
+        listen 2222;
+        proxy_pass builder;
+    }
+
+    upstream registry {
+        server {{ .deis_registry_host }}:{{ .deis_registry_port }};
+    }
+
+    server {
+        listen 5000;
+        proxy_pass registry;
+    }
+}
+
